feat : CircuitBreaker 실습

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,19 @@ resilience4j.retry:
   instances:
     retryConfig: # config ????? ?? ?
       base-config: default
-###############################  
+###### Retry? ##### CircuitBreaker ? #####
 resilience4j.circuitbreaker:
   configs:
-    defalut:
+    default:
       sliding-window-type: count_based # ?? ??? ???? ???? open ??? ????, ???? vs ????
       minimum-number-of-calls: 5 # ?? 5? ???? ???? ??? ??? open?? ???? ??.
       sliding-window-size: 10 # ?? ??? ?????? ? ???? ?? 10?? ?? ? ??? ??
-      
+
+      record-exceptions:
+        - com.example.resil.exception.CircuitBreakerException
+      ignore-exceptions:
+        - com.example.resil.exception.IgnoreException
+  instances:
+    circuitBreakerConfig:
+      base-config: default
+
